--- a/src/theme/classes/global.css
+++ b/src/theme/classes/global.css
@@ -69,16 +69,16 @@
   cursor: none;
   background: linear-gradient(90deg, #f0f0f0 25%, #ffffff 50%, #f0f0f0 75%);
   background-size: 200% 100%;
-  animation: poi-list-shimmer 1.5s infinite;
+  animation: shimmer-animation 1.5s infinite;
 }
 
 .shimmer-dark-mode {
   background: linear-gradient(90deg, #212b36 25%, #4a5e79 50%, #212b36 75%);
   background-size: 200% 100%;
-  animation: poi-list-shimmer 1.5s infinite;
+  animation: shimmer-animation 1.5s infinite;
 }
 
-@keyframes poi-list-shimmer {
+@keyframes shimmer-animation {
   0% {
     background-position: -200% 0;
   }
